# rust-sugarscape

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/sugarscape-gui/: Cargo.toml
crates/sugarscape-gui/src/: lib.rs  main.rs  reader.rs
crates/sugarscape-gui/src/app/: agents_plot.rs  mod.rs  plot_common.rs  sugar_heatmap.rs  wealth_histogram.rs
crates/sugarscape-sim/: Cargo.toml  config.example.yaml
crates/sugarscape-sim/src/: agents.rs  config.rs  lib.rs  main.rs  model.rs  run.rs  world.rs  writer.rs
crates/sugarscape-sim/src/model/: ages.rs  capacities.rs  geometry.rs  init_agents.rs  init_world.rs  mod.rs  step.rs  visions.rs  wealths.rs
crates/sugarscape-sim/src/sim/: mod.rs  model.rs
crates/sugarscape-sim/tests/: cli.rs
crates/sugarscape-sim/tests/fixtures/: invalid_config.yaml
crates/sugarscape-viz/: Cargo.toml
crates/sugarscape-viz/src/: main.rs
