[workspace]
resolver = "2"
members = [
    "crates/sugarscape-sim",
    "crates/sugarscape-viz",
    "crates/sugarscape-gui",
    "scratchpad",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
arrow = { version = "58.1.0", default-features = false, features = ["ipc"] }
parquet = { version = "58.1.0", default-features = false, features = ["arrow"] }
