[package]
name = "sugarscape-gui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arrow.workspace = true
eframe = "0.34.1"
egui_plot = "0.35.0"
parquet.workspace = true
rand = "0.10.0"
sugarscape-sim = { path = "../sugarscape-sim" }
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3.27.0"
