[package]
name = "sugarscape-sim"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
arrow = { version = "54", default-features = false, features = ["ipc"] }
parquet = { version = "54", default-features = false, features = ["arrow"] }

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"

[lints.rust]
dead_code = "allow"
