[package]
name = "sugarscape-sim"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
arrow.workspace = true
parquet.workspace = true
validator = { version = "0.20", features = ["derive"] }
rand = "0.10.0"
bimap = "0.6.3"
thiserror = "2.0.18"

[dev-dependencies]
approx = "0.5.1"
assert_cmd = "2"
p-test = "1.0.2"
tempfile = "3"

