[package]
name = "sugarscape-viz"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
arrow = { version = "54", default-features = false, features = ["ipc"] }
parquet = { version = "54", default-features = false, features = ["arrow"] }
ratatui = "0.30.0"
crossterm = "0.29.0"
