[package]
name = "sugarscape-viz"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
thiserror = "2.0.18"
clap = { version = "4", features = ["derive"] }
arrow = { version = "54", default-features = false, features = ["ipc"] }
parquet = { version = "54", default-features = false, features = ["arrow"] }
ratatui = "0.30.0"
crossterm = "0.29.0"
ratatui-plt = "0.0.2"

[dev-dependencies]
tempfile = "3.27.0"
